test/org/midica/testfiles/failing/chord-inside-instruments.midica
INSTRUMENTS
	0 0 test
	CHORD testchord c d e
END
